# slgFramework

./: .gitignore  README.md
slg/: CMakeLists.txt  Definitions.h  camera.cpp  camera.h  realFFTW.cpp  realFFTW.h  slg2D.cpp  slg2D.h  slgAudio.cpp  slgAudio.h  slgCircularBuffer.cpp  slgCircularBuffer.h  slgCircularBuffer2D.cpp  slgCircularBuffer2D.h  slgFluidSynth.cpp  slgFluidSynth.h  slgGLUT.h  slgGUI.cpp  slgGUI.h  slgGen.cpp  slgGen.h  slgGraphics.cpp  slgGraphics.h  slgMath.cpp  slgMath.h  slgMidi.cpp  slgMidi.h  slgOsc.cpp  slgOsc.h  slgOscillator.cpp  slgOscillator.h  slgPhysics.cpp  slgPhysics.h  slgSlider.h  slgToggleButton.cpp  slgToggleButton.h  slgUtils.cpp  slgUtils.h  utils.cpp  utils.h
slg2D/: CMakeLists.txt  Findslg.cmake  main.cpp  main.cpp.bu  makefile  slgApp.cpp  slgApp.h  test
slg2D/slgTest.xcodeproj/: project.pbxproj
slg2D/slgTest.xcodeproj/project.xcworkspace/xcshareddata/: slgTest.xccheckout
slg2D/slgTest.xcodeproj/project.xcworkspace/xcuserdata/slegroux1.xcuserdatad/: UserInterfaceState.xcuserstate
slg2D/slgTest.xcodeproj/xcuserdata/slegroux1.xcuserdatad/xcschemes/: xcschememanagement.plist
slg3D/: main.cpp  makefile  test
slgAV/: main.cpp  makefile  slgApp.cpp  slgApp.h  test
slgAudio/: CMakeLists.txt  Makefile  main.cpp  makefile  slgAudio.cpp  slgAudio.h  test  test.cpp
slgAudioFile/: Makefile  slgAudioFile.cpp  slgAudioFile.h  test.cpp
slgAudioscope/: main.cpp  makefile  test
slgCamera/: main.cpp  makefile  test
slgCircularBuffer/: main.cpp  makefile  test
slgCocoa/OpenGL/OpenGL/: AppDelegate.h  AppDelegate.m  MyGLView.h  MyGLView.mm  ViewController.h  ViewController.mm  main.m  slgSound.h  slgSound.mm
slgCocoa/OpenGL/OpenGL.xcodeproj/: project.pbxproj
slgCocoa/OpenGL/OpenGLTests/: Info.plist  OpenGLTests.m
slgCocoa/slgCocoa/: main.cpp
slgCocoa/slgGUI/: MyOpenGLView.h  MyOpenGLView.m
slgCocoa/slgGUI/slgGUI/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
slgCocoa/slgGUI/slgGUI.xcodeproj/: project.pbxproj
slgCocoa/slgGUI/slgGUITests/: slgGUITests.m
slgCocoa/slgTest.xcodeproj/: project.pbxproj
slgCocoa/slgTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
slgFFTW/: inversed.txt  mag.txt  magDB.txt  main.cpp  makefile  makefile-swig.sh  phase.txt  realFFTW.i  realFFTW.py  realFFTW_wrap.cxx  test
slgFluidsynth/: makefile  test  test.cpp
slgFx/: makefile  slgAudio.h  slgFilter.cpp  slgFilter.h  slgOnePole.cpp  slgOnePole.h  test  test.cpp
slgGL/: makefile  slgGFX.cpp  slgGFX.h  slgGL.cpp  slgGL.h  test  test.cpp
slgGUI/: main.cpp  makefile  test
slgGen/: Sine.txt  fft-test.py  main.cpp  makefile  test
slgMath/: main.cpp  makefile  test
slgMidi/: README.md  main.cpp  makefile  slgMidi.cpp  slgMidi.h  test  test.cpp
slgOSC/: main.cpp  makefile  slgApp.cpp  slgApp.h  test
slgOsc/: main.cpp  makefile  test
slgOscillator/: main.cpp  makefile  test
slgPhysics/: main.cpp  makefile  slgApp.cpp  slgApp.h  test
slgSpectrum/: makefile  slgAudio.h  slgSpectrum.cpp  slgSpectrum.h  test  test.cpp
slgSpectrum/FFT/: realFFT.cpp  realFFT.h  realFFTData.cpp  realFFTData.h
slgSpectrum/FFT/.svn/: entries
slgStk/: Synthesizer.h  main.cpp  makefile  test
slgUtils/: main.cpp  makefile  test
(+9 files in other folders)
